# WaveSetWizard

./: .gitignore  CMakeLists.txt  WaveSetWizard.jucer
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Resources/: design.afdesign
Source/: IKnobComponent.h  ISelectorComponent.h  ISlider.h  ISliderPresenter.h  KnobComponent.cpp  KnobComponent.h  ParameterType.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SelectorCompomnent.cpp  SelectorCompomnent.h  SelectorComponent.cpp  SelectorComponent.h  Slider.cpp  Slider.h  SliderPresenter.cpp  SliderPresenter.h
WaveSetWizardCore/: Cargo.toml
WaveSetWizardCore/src/: lib.rs
WaveSetWizardCore/src/buffer/: audio_buffer.rs  audio_ring_buffer.rs  mod.rs
WaveSetWizardCore/src/processor/: audio_buffer.rs  audio_ring_buffer.rs  engine.rs  mod.rs  parameter_set.rs  wave_set_buffer.rs  wave_set_channel.rs  wave_set_detector.rs
cmake/: FindTrevor.cmake
core/: Cargo.toml
core/src/: lib.rs
core/src/processor/: engine.rs  wave_set_buffer.rs  wave_set_channel.rs  wave_set_detector.rs
include/: IKnobComponent.h  ISelectorComponent.h  KnobComponent.h  ParameterSet.h  ParameterType.h  PluginEditor.h  PluginProcessor.h  SelectorComponent.h  TrevorEditor.h  TrevorProcessor.h
src/: KnobComponent.cpp  PluginEditor.cpp  PluginProcessor.cpp  SelectorComponent.cpp  TrevorEditor.cpp  TrevorProcessor.cpp
