[package]
name = "trevor_core"
version = "0.1.0"
authors = ["Chikashi Miyama <chikashimiyama@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ring_buffer = "0.1.3"
libc = "0.2.68"